💡 Changing title name

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/edicsonabel/mdbootstrap/css/all.min.css'/>
   <link rel='stylesheet' href='css/style.css'>
   
-  <title>Paypal Calculator</title>
+  <title>PayPal Calculator</title>
 </head>
 <body>
 
   <nav class="mb-1 navbar navbar-dark fixed-top scrolling-navbar primary-color">
     <div class="container">
-        <a class="navbar-brand" href="/">PayPalator</a>
+        <a class="navbar-brand" href="./">PayPal Calculator</a>
           <ul class="navbar-nav ml-auto nav-flex-icons">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" id="language" data-toggle="dropdown"
@@ -64,7 +64,6 @@
   </main>
   <!-- All MDB core JavaScript -->
   <script src='https://cdn.jsdelivr.net/gh/edicsonabel/mdbootstrap/js/all.min.js'></script>
-  <!-- <script src='../all.min.js'></script> -->
   <script src='js/script.js'></script>
 </body>
 </html>
