--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge' />
   <meta name='viewport' content='width=device-width, initial-scale=1' />
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script defer src="https://www.googletagmanager.com/gtag/js?id=G-NXLJPTLYZF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-NXLJPTLYZF');
+  </script>
+
   <title>PayPal Calculator</title>
   <meta name='twitter:title' content='PayPal Calculator' />
   <meta name='description' property='og:description'
